{{$NEXT}}

0.005     2011-08-17 21:00:17 America/Vancouver

    -- URL parameter no longer required for AsyncService config, unless
       the service is accessed through HTTP redirects
    -- return HTTP 500 when internal service error occurs, not HTTP 200
    -- fixed uncaught exception when parsing input RDF in AsyncService.pm
    -- disable throwing of an exception on malformed email address (Provider) 
       or malformed authority (Authority)
    -- fixed incorrect root URI for RDF service description, when service URL is unspecified 

0.004     2011-07-21 06:47:17 Europe/Vienna
    
    -- minor documentation cleanup on main page (SADI::Simple)

0.003     2011-07-19 13:58:01 Europe/Vienna

    -- botched move of testlib/CGI/Test.pm below, try again

0.002     2011-07-19 12:45:14 Europe/Vienna

    -- moved testlib/CGI/Test.pm to t/CGITest.pm so CPAN doesn't try to install it 

0.001     2011-07-19 11:44:55 Europe/Vienna

    -- initial release